--- a/Basilisk.xcodeproj/xcshareddata/xcschemes/Serpent.xcscheme
+++ b/Basilisk.xcodeproj/xcshareddata/xcschemes/Serpent.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "128C7688273E10DD008FD585"
-               BuildableName = "Glare"
-               BlueprintName = "Glare"
+               BlueprintIdentifier = "12F4FDB2273DFCD000B6AE64"
+               BuildableName = "Serpent.framework"
+               BlueprintName = "Serpent"
                ReferencedContainer = "container:Basilisk.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "12F4FDBB273DFCD000B6AE64"
+               BuildableName = "SerpentTests.xctest"
+               BlueprintName = "SerpentTests"
+               ReferencedContainer = "container:Basilisk.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -40,16 +50,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "128C7688273E10DD008FD585"
-            BuildableName = "Glare"
-            BlueprintName = "Glare"
-            ReferencedContainer = "container:Basilisk.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -57,16 +57,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "128C7688273E10DD008FD585"
-            BuildableName = "Glare"
-            BlueprintName = "Glare"
+            BlueprintIdentifier = "12F4FDB2273DFCD000B6AE64"
+            BuildableName = "Serpent.framework"
+            BlueprintName = "Serpent"
             ReferencedContainer = "container:Basilisk.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
